--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
   },
   "dependencies": {
     "compression": "1.7.1",
+    "connect-redis": "3.3.3",
     "express": "4.16.2",
+    "express-session": "1.15.6",
     "morgan": "1.9.0",
     "nunjucks": "3.0.1",
     "raven": "2.4.0",
+    "redis": "2.8.0",
     "winston": "2.4.0"
   }
 }
