--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "nunjucks": "3.0.1",
     "raven": "2.4.0",
     "redis": "2.8.0",
+    "request": "2.83.0",
+    "uuid": "3.2.1",
     "winston": "2.4.0"
   }
 }
