--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
     "load-grunt-tasks": "3.5.2",
+    "mockdate": "2.0.2",
     "nodemon": "1.15.1",
     "proxyquire": "1.8.0",
     "supertest": "3.0.0"
