--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "datascience-fe",
-  "version": "1.2.4",
-  "description": "Front end for Data Science",
+  "name": "data-hub-lab-frontend",
+  "version": "1.2.5",
+  "description": "Front end for Data Hub lab features",
   "main": "server.js",
   "engines": {
     "node": "8.11.1",
     "npm": "5.6.0"
   },
   "scripts": {
+    "preversion": "npm run lint && npm test",
+    "postversion": "git push && git push --tags",
+    "tag-master": "git tag v${npm_package_version}-master && git push --tags",
     "test": "NODE_ENV=development; LOG_LEVEL=error; SSO_BYPASS=true; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
     "start": "NODE_ENV=production node --use-strict dist/server.js",
     "watch": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'",
@@ -20,14 +23,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uktrade/datascience-fe.git"
+    "url": "git+https://github.com/uktrade/data-hub-lab-frontend.git"
   },
   "author": "Graham Veal",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/uktrade/datascience-fe/issues"
+    "url": "https://github.com/uktrade/data-hub-lab-frontend/issues"
   },
-  "homepage": "https://github.com/uktrade/datascience-fe#readme",
+  "homepage": "https://github.com/uktrade/data-hub-lab-frontend#readme",
   "devDependencies": {
     "eslint": "^5.1.0",
     "grunt": "^1.0.3",
