--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postversion": "git push && git push --tags",
     "tag-master": "git tag v${npm_package_version}-master && git push --tags",
     "test": "NODE_ENV=development; LOG_LEVEL=error; SSO_BYPASS=true; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
+    "test:unit": "NODE_ENV=test LOG_LEVEL=silent mocha ./test/unit --opts ./test/unit/mocha.opts",
     "start": "NODE_ENV=production node --use-strict dist/server.js",
     "watch": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'",
     "grunt": "grunt dist",
@@ -33,6 +34,12 @@
   "homepage": "https://github.com/uktrade/data-hub-lab-frontend#readme",
   "devDependencies": {
     "eslint": "^5.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-concat": "1.0.1",
@@ -45,6 +52,10 @@
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
     "load-grunt-tasks": "3.5.2",
+    "mocha": "^5.2.0",
+    "mocha-circleci-reporter": "0.0.3",
+    "mocha-multi": "^1.0.1",
+    "mocha-webpack": "^1.1.0",
     "mockdate": "2.0.2",
     "nodemon": "^1.18.1",
     "proxyquire": "1.8.0",
@@ -56,6 +67,7 @@
     "dateformat": "3.0.3",
     "express": "4.16.3",
     "express-session": "1.15.6",
+    "govuk-frontend": "^1.3.0",
     "hawk": "7.0.7",
     "morgan": "1.9.0",
     "nunjucks": "^3.1.3",
