changes to server config to be able to use dev with any IDE

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/uktrade/data-hub-lab-frontend#readme",
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
