--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "express": "4.16.3",
     "express-session": "1.15.6",
     "govuk-frontend": "^1.3.0",
+    "grunt-sass": "^3.0.1",
     "hawk": "7.0.7",
     "morgan": "1.9.0",
     "nunjucks": "^3.1.3",
