--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
+    "date-fns": "^1.29.0",
     "dateformat": "3.0.3",
     "express": "4.16.3",
     "express-session": "1.15.6",
