--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,5 @@
 {
-  "extends": "eslint:recommended",
-
-  "env": {
-    "browser": false,
-    "node": true,
-    "es6": true
-  },
-
-  "parserOptions": {
-    "ecmaVersion": 8
-  },
+  "extends": "standard",
 
   "rules": {
     "comma-dangle": [
