--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "grunt": "^1.0.3",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
@@ -77,6 +78,7 @@
     "hawk": "7.0.7",
     "morgan": "1.9.0",
     "nunjucks": "^3.1.3",
+    "qs": "^6.5.2",
     "raven": "^2.6.3",
     "redis": "2.8.0",
     "request": "^2.87.0",
