DST-926 setup jest test environemnt

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postversion": "git push && git push --tags",
     "tag-master": "git tag v${npm_package_version}-master && git push --tags",
     "test": "NODE_ENV=development; LOG_LEVEL=error; SSO_BYPASS=true; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
-    "test:unit": "NODE_ENV=test LOG_LEVEL=silent mocha ./test/unit --opts ./test/unit/mocha.opts",
+    "test:unit": "jest",
     "start": "NODE_ENV=production node --use-strict dist/server.js",
     "watch": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'",
     "grunt": "grunt dist",
@@ -55,6 +55,8 @@
     "grunt-usemin": "3.1.1",
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
+    "jest": "^23.6.0",
+    "jest-codemods": "^0.16.0",
     "load-grunt-tasks": "3.5.2",
     "mocha": "^5.2.0",
     "mocha-circleci-reporter": "0.0.3",
