--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "dist-install": "cd dist && npm install --production",
     "dist": "npm run build:dist && npm run start",
     "heroku-postbuild": "npm run build:dist",
-    "lint": "eslint src/app"
+    "lint": "eslint src/app",
+    "dev": "webpack --mode development",
+
+    "prod": "webpack --mode production",
+    "develop": "run-p watch:js:*",
+
+    "watch:js:client": "webpack --watch --progress --mode development",
+    "watch:js:server": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'"
   },
   "repository": {
     "type": "git",
@@ -33,6 +40,7 @@
   },
   "homepage": "https://github.com/uktrade/data-hub-lab-frontend#readme",
   "devDependencies": {
+    "browser-sync-webpack-plugin": "^2.2.2",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
@@ -65,26 +73,44 @@
     "mockdate": "2.0.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.3",
     "proxyquire": "1.8.0",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "autoprefixer": "^9.3.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
+    "css-loader": "^1.0.1",
     "date-fns": "^1.29.0",
     "dateformat": "3.0.3",
     "express": "4.16.3",
     "express-session": "1.15.6",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fast-sass-loader": "^1.4.6",
+    "get-form-data": "^2.0.0",
     "govuk-frontend": "^1.3.0",
     "grunt-sass": "^3.0.1",
     "hawk": "7.0.7",
+    "history": "^4.7.2",
+    "image-webpack-loader": "^4.4.0",
     "morgan": "1.9.0",
     "nunjucks": "^3.1.3",
+    "postcss-loader": "^3.0.0",
     "qs": "^6.5.2",
     "raven": "^2.6.4",
     "redis": "2.8.0",
     "request": "^2.88.0",
+    "resolve-url-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
+    "webpack": "^4.23.1",
+    "webpack-assets-manifest": "^3.1.0",
+    "webpack-merge": "^4.1.4",
     "winston": "2.4.2"
   }
 }
