--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "5.6.0"
   },
   "scripts": {
-    "clean": "del .build",
+    "clean": "del 'src/app/public/dist",
     "preversion": "npm run lint && npm test",
     "postversion": "git push && git push --tags",
     "tag-master": "git tag v${npm_package_version}-master && git push --tags",
