--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "build": "npm run clean && npm run prod",
     "dist": "npm run build:dist && npm run start",
     "heroku-postbuild": "npm run build",
-    "lint": "eslint src/app",
+    "lint": "npm-run-all lint:all:*",
+    "lint:all:js": "eslint ./src ./config",
+    "lint:all:styles": "sass-lint -v -q -c .sass-lint.yml src/public/scss/**/*.scss",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
     "develop": "run-p watch:js:*",
@@ -36,6 +38,11 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uktrade/data-science-frontend.git"
+  },
+  "pre-commit": "lint-staged",
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.scss": "sass-lint -v -q -c .sass-lint.yml"
   },
   "contributors": [
     "John Fieldman <hello@johnfieldman.com> (https://github.com/yozzo)",
@@ -84,6 +91,7 @@
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "proxyquire": "1.8.0",
+    "sass-lint": "^1.12.1",
     "supertest": "^3.3.0",
     "webpack-cli": "^3.1.2"
   },
@@ -124,5 +132,6 @@
     "webpack-assets-manifest": "^3.1.0",
     "webpack-merge": "^4.1.4",
     "winston": "2.4.2"
-  }
+  },
+  "sasslintConfig": ".sass-lint.yml"
 }
