--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "array-from": "^2.1.1",
     "autoprefixer": "^9.3.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
@@ -108,6 +109,8 @@
     "date-fns": "^1.29.0",
     "dateformat": "3.0.3",
     "del-cli": "^1.1.0",
+    "element-closest": "^2.0.2",
+    "es6-promise": "^4.2.5",
     "express": "4.16.3",
     "express-session": "1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -117,8 +120,9 @@
     "grunt-sass": "^3.0.1",
     "hawk": "7.0.7",
     "history": "^4.7.2",
-    "image-webpack-loader": "^4.4.0",
-    "morgan": "1.9.0",
+    "html5shiv": "^3.7.3",
+    "image-webpack-loader": "^4.5.0",
+    "morgan": "^1.9.1",
     "nunjucks": "^3.1.3",
     "postcss-loader": "^3.0.0",
     "qs": "^6.5.2",
