--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ aliases:
     restore_cache:
       name: Restore npm dependencies cache
       key: npm-dependency-{{ checksum "package.json" }}
+  - &restore_uitest_npm_cache
+    restore_cache:
+      name: Restore uitest npm dependencies cache
+      key: uitest-npm-dependency-{{ checksum "package.json" }}
 
 jobs:
   dependencies:
@@ -48,6 +52,21 @@ jobs:
           command: npm run test
           when: always
 
+  uitest_dependencies:
+    docker:
+      - image: *node_version
+    working_directory: ~/data-science-frontend/uiTest
+    steps:
+      - checkout
+      - *restore_uitest_npm_cache
+      - run: sudo apt-get install xvfb
+      - run: npm install
+      - save_cache:
+          name: Save uitest npm dependencies cache
+          key: uitest-npm-dependency-{{ checksum "package.json" }}
+          paths:
+            - ~/data-science-frontend/uiTest/node_modules
+
   functional_test:
     docker:
       - image: *node_version
@@ -55,6 +74,7 @@ jobs:
     steps:
       - checkout
       - *restore_npm_cache
+      - *restore_uitest_npm_cache
       - run:
           name: Cypress tests
           command: ./run-functional-tests-ci.sh
@@ -71,7 +91,10 @@ workflows:
       - unit_test:
           requires:
             - dependencies
-      - functional_test:
+      - uitest_dependencies:
           requires:
             - lint_test
             - unit_test
+      - functional_test:
+          requires:
+            - uitest_dependencies
