--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,6 @@ jobs:
     steps:
       - checkout
       - *restore_uitest_npm_cache
-      - run: sudo apt-get install xvfb
       - run: npm install
       - save_cache:
           name: Save uitest npm dependencies cache
@@ -77,7 +76,7 @@ jobs:
       - *restore_uitest_npm_cache
       - run:
           name: Cypress tests
-          command: ./run-functional-tests-ci.sh
+          command: xvfb-run ./run-functional-tests-ci.sh
           when: always
 
 workflows:
