--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,20 +52,6 @@ jobs:
           command: npm run test
           when: always
 
-  uitest_dependencies:
-    docker:
-      - image: *node_version
-    working_directory: ~/data-science-frontend/uiTest
-    steps:
-      - checkout
-      - *restore_uitest_npm_cache
-      - run: npm install
-      - save_cache:
-          name: Save uitest npm dependencies cache
-          key: uitest-npm-dependency-{{ checksum "package.json" }}
-          paths:
-            - ~/data-science-frontend/uiTest/node_modules
-
   functional_test:
     docker:
       - image: *node_version
@@ -76,7 +62,11 @@ jobs:
       - *restore_uitest_npm_cache
       - run:
           name: Cypress tests
-          command: xvfb-run ./run-functional-tests-ci.sh
+          command: |
+            cd uiTest
+            npm install
+            cd ..
+            xvfb-run ./run-functional-tests-ci.sh
           when: always
 
 workflows:
@@ -90,10 +80,7 @@ workflows:
       - unit_test:
           requires:
             - dependencies
-      - uitest_dependencies:
+      - functional_test:
           requires:
             - lint_test
             - unit_test
-      - functional_test:
-          requires:
-            - uitest_dependencies
