--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,34 @@ jobs:
           command: npm run test
           when: always
 
+  uitest_dependencies:
+    docker:
+      - image: *node_version
+    working_directory: ~/data-science-frontend/uiTest
+    steps:
+      - checkout
+      - *restore_uitest_npm_cache
+      - run: 
+          name: Functional dependencies
+          command: |
+            npm install
+            apt-get update; apt-get install xvfb -y sudo
+            apt-get install -y sudo libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
+            cd /tmp
+            wget http://download.redis.io/redis-stable.tar.gz
+            tar xvzf redis-stable.tar.gz
+            cd redis-stable
+            make
+            cp src/redis-cli /usr/local/bin/
+            chmod 755 /usr/local/bin/redis-cli
+      - save_cache:
+          name: Save uitest npm dependencies cache
+          key: uitest-npm-dependency-{{ checksum "package.json" }}
+          paths:
+            - ~/data-science-frontend/uiTest/node_modules
+            - /root/.cache/Cypress
+          when: always
+
   functional_test:
     docker:
       - image: *node_version
@@ -62,17 +90,7 @@ jobs:
       - *restore_uitest_npm_cache
       - run:
           name: Cypress tests
-          command: |
-            cd uiTest
-            npm install
-            cd ..
-            apt-get update; apt-get install xvfb -y sudo
-            xvfb-run ./run-functional-tests-ci.sh
-      - save_cache:
-          name: Save uitest npm dependencies cache
-          key: uitest-npm-dependency-{{ checksum "package.json" }}
-          paths:
-            - ~/data-science-frontend/uiTest/node_modules
+          command: xvfb-run ./run-functional-tests-ci.sh
           when: always
 
 workflows:
@@ -86,7 +104,10 @@ workflows:
       - unit_test:
           requires:
             - dependencies
-      - functional_test:
+      - uitest_dependencies:
           requires:
             - lint_test
             - unit_test
+      - functional_test:
+          requires:
+            - uitest_dependencies
