--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,13 +55,14 @@ jobs:
   uitest_dependencies:
     docker:
       - image: *node_version
-    working_directory: ~/data-science-frontend/uiTest
+    working_directory: ~/data-science-frontend
     steps:
       - checkout
       - *restore_uitest_npm_cache
       - run: 
           name: Functional dependencies
           command: |
+            cd uiTest
             npm install
             apt-get update; apt-get install xvfb -y sudo
             apt-get install -y sudo libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
