--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,24 +59,20 @@ jobs:
     steps:
       - checkout
       - *restore_npm_cache
-      - *restore_uitest_npm_cache
       - run: 
           name: Functional dependencies
           command: |
             cd uiTest
             npm install
-            apt-get update; apt-get install xvfb -y sudo
-            apt-get install -y sudo libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
-            cd /tmp
-            wget http://download.redis.io/redis-stable.tar.gz
-            tar xvzf redis-stable.tar.gz
-            cd redis-stable
-            make
-            cp src/redis-cli /usr/local/bin/
-            chmod 755 /usr/local/bin/redis-cli
+            apt-get update
+            apt-get install xvfb -y sudo
+            apt-get install redis-server -y sudo
+            apt-get install -y sudo libgtk2.0-0 libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
       - run:
           name: Cypress tests
-          command: xvfb-run ./run-functional-tests-ci.sh
+          command: | 
+            redis-server&
+            xvfb-run ./run-functional-tests-ci.sh
           when: always
       - save_cache:
           name: Save uitest npm dependencies cache
