--- a/package.json
+++ b/package.json
@@ -114,7 +114,6 @@
     "express": "4.16.3",
     "express-session": "1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fast-sass-loader": "^1.4.6",
     "get-form-data": "^2.0.0",
     "govuk-frontend": "^1.3.0",
     "grunt-sass": "^3.0.1",
@@ -130,6 +129,7 @@
     "redis": "2.8.0",
     "request": "^2.88.0",
     "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "uuid": "^3.3.2",
