--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
       }
     ],
     "object-curly-spacing": ["error", "always"],
-    "dot-notation": "error"
+    "dot-notation": "error",
+    "no-undef": "off"
   }
 }
