--- a/uiTest/functional/package.json
+++ b/uiTest/functional/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/cypress run",
-    "watch": "./node_modules/.bin/cypress open",
+    "test:watch": "./node_modules/.bin/cypress open",
     "lint": "eslint --cache ."
   },
   "author": "DIT",
@@ -16,8 +16,14 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "cypress": "^3.1.3",
-    "eslint": "^3.19.0",
+    "@ljharb/eslint-config": "^13.1.1",
+    "eslint": "^5.6.1",
+    "eslint-config-medikoo-es5": "^2.0.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
