--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -24,7 +24,6 @@
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "webdriverio": "^5.3.0"
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
