--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@ljharb/eslint-config": "^13.1.1",
+    "@wdio/browserstack-service": "^5.2.8",
     "@wdio/cli": "^5.3.0",
     "@wdio/local-runner": "^5.3.0",
     "@wdio/mocha-framework": "^5.2.8",
