--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "html5shiv": "^3.7.3",
     "image-webpack-loader": "^4.6.0",
     "lodash": "^4.17.11",
-    "morgan": "^1.9.1",
+    "morgan": ">=1.9.1",
     "nunjucks": "^3.1.3",
     "postcss-loader": "^3.0.0",
     "qs": "^6.5.2",
