--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,15 @@
 version: 2
 aliases:
-  - &node_version node:8.11.3
+  - &node_version node:8.15.1
   # Common steps
   - &restore_npm_cache
     restore_cache:
       name: Restore npm dependencies cache
-      key: npm-dependency-{{ checksum "package.json" }}
+      key: npm-dependency-{{ checksum "package.json" }}-{{ checksum "node_version" }}-{{ checksum "npm_version" }}
+  - &store_versions
+    run:
+      name: Temporarily store node/npm versions on filesystem
+      command: node --version > node_version; npm --version > npm_version
   - &restore_functional_npm_cache
     restore_cache:
       name: Restore functional test npm dependencies cache
@@ -36,6 +40,7 @@ jobs:
     working_directory: ~/data-science-frontend
     steps:
       - checkout
+      - *store_versions
       - *restore_npm_cache
       - run:
           name: Lint code
@@ -50,6 +55,7 @@ jobs:
     working_directory: ~/data-science-frontend
     steps:
       - checkout
+      - *store_versions
       - *restore_npm_cache
       - run:
           name: Jest tests
@@ -62,6 +68,7 @@ jobs:
     working_directory: ~/data-science-frontend
     steps:
       - checkout
+      - *store_versions
       - *restore_npm_cache
       - *restore_functional_npm_cache
       - run:
@@ -75,7 +82,7 @@ jobs:
             apt-get install -y sudo libgtk2.0-0 libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
       - run:
           name: Cypress tests
-          command: | 
+          command: |
             redis-server&
             xvfb-run ./run-functional-tests-ci.sh
           when: always
@@ -95,9 +102,10 @@ jobs:
     working_directory: ~/data-science-frontend
     steps:
       - checkout
+      - *store_versions
       - *restore_npm_cache
       - *restore_end_to_end_npm_cache
-      - run: 
+      - run:
           name: End to end dependencies
           command: |
             cd uiTest/end-to-end
