--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,12 @@ jobs:
     working_directory: ~/data-science-frontend
     steps:
       - checkout
+      - *store_versions
       - *restore_npm_cache
       - run: npm install
       - save_cache:
           name: Save npm dependencies cache
-          key: npm-dependency-{{ checksum "package.json" }}
+          key: npm-dependency-{{ checksum "package.json" }}-{{ checksum "node_version" }}-{{ checksum "npm_version" }}
           paths:
             - ~/data-science-frontend/node_modules
 
