--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2
 aliases:
-  - &node_version node:8.15.1
+  - &node_version  node:8.15.1
+  - &redis_version redis:3.2.10
   # Common steps
   - &restore_npm_cache
     restore_cache:
@@ -18,6 +19,14 @@ aliases:
     restore_cache:
       name: Restore end to end test npm dependencies cache
       key: webdriverio-npm-dependency-{{ checksum "package.json" }}
+
+  # Cypress dependencies base docker container
+  - &docker_dit_cypress_dependencies
+    image: ukti/docker-dit-cypress
+
+  # Data hub redis container
+  - &docker_redis
+    image: *redis_version
 
 jobs:
   dependencies:
@@ -65,7 +74,8 @@ jobs:
 
   functional_test:
     docker:
-      - image: *node_version
+      - *docker_dit_cypress_dependencies
+      - *docker_redis
     working_directory: ~/data-science-frontend
     steps:
       - checkout
@@ -77,15 +87,9 @@ jobs:
           command: |
             cd uiTest/functional
             npm install
-            apt-get update
-            apt-get install xvfb -y sudo
-            apt-get install redis-server -y sudo
-            apt-get install -y sudo libgtk2.0-0 libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
       - run:
           name: Cypress tests
-          command: |
-            redis-server&
-            xvfb-run ./run-functional-tests-ci.sh
+          command: ./run-functional-tests-ci.sh
           when: always
       - save_cache:
           name: Save uitest npm dependencies cache
