--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "tag-master": "git tag v${npm_package_version}-master && git push --tags",
     "test": "NODE_ENV=development; SSO_BYPASS=true; jest",
     "test:unit": "jest",
+    "test:functional": "cypress run",
+    "test:functional:watch": "cypress open",
     "start": "NODE_ENV=production node --use-strict server.js",
     "watch": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'",
     "grunt": "grunt dist",
@@ -57,6 +59,7 @@
   "homepage": "https://github.com/uktrade/data-science-frontend#readme",
   "devDependencies": {
     "browser-sync-webpack-plugin": "^2.2.2",
+    "cypress": "^3.1.3",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
