--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   "dependencies": {
     "array-from": "^2.1.1",
     "autoprefixer": "^9.3.1",
-    "axios": "^0.18.0",
+    "axios": ">=0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -144,6 +144,7 @@
   },
   "sasslintConfig": ".sass-lint.yml",
   "resolutions": {
-    "tar": "^4.4.8"
+    "tar": "^4.4.8",
+    "fstream": ">=1.0.12"
   }
 }
