--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "cypress": "^3.1.3",
     "dotenv": "^6.0.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.2.0",
@@ -94,7 +94,7 @@
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.5",
     "proxyquire": "1.8.0",
-    "sass-lint": "^1.12.1",
+    "sass-lint": "^1.13.1",
     "supertest": "^3.3.0",
     "webpack-cli": "^3.1.2"
   },
@@ -125,6 +125,8 @@
     "history": "^4.7.2",
     "html5shiv": "^3.7.3",
     "image-webpack-loader": "^4.6.0",
+    "istanbul-api": "^2.1.6",
+    "js-yaml": "^3.13.1",
     "lodash": ">=4.17.11",
     "morgan": ">=1.9.1",
     "nunjucks": "^3.1.3",
@@ -146,6 +148,7 @@
   "sasslintConfig": ".sass-lint.yml",
   "resolutions": {
     "tar": "^4.4.8",
-    "fstream": ">=1.0.12"
+    "fstream": ">=1.0.12",
+    "js-yaml": ">=3.13.1"
   }
 }
