--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
   "resolutions": {
     "tar": "^4.4.8",
     "fstream": ">=1.0.12",
-    "js-yaml": ">=3.13.1"
+    "js-yaml": ">=3.13.1",
+    "underscore.string": ">=3.3.5"
   }
 }
