--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "tar": "^4.4.8",
     "fstream": ">=1.0.12",
     "js-yaml": ">=3.13.1",
-    "underscore.string": ">=3.3.5"
+    "underscore.string": ">=3.3.5",
+    "handlebars": ">=4.1.0"
   }
 }
