--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "image-webpack-loader": "^4.6.0",
     "istanbul-api": "^2.1.6",
     "js-yaml": "^3.13.1",
-    "lodash": ">=4.17.11",
+    "lodash": ">=4.17.13",
     "morgan": ">=1.9.1",
     "nunjucks": "^3.1.3",
     "postcss-loader": "^3.0.0",
@@ -152,7 +152,8 @@
     "js-yaml": ">=3.13.1",
     "underscore.string": ">=3.3.5",
     "handlebars": ">=4.1.0",
-    "lodash": ">=4.17.11",
-    "shelljs": ">=0.8.3"
+    "lodash": ">=4.17.13",
+    "shelljs": ">=0.8.3",
+    "mem": ">=4.0.0"
   }
 }
