--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -27,5 +27,9 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "resolutions": {
+    "lodash": ">=4.17.13",
+    "mem": ">=4.0.0"
   }
 }
