--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "lodash": ">=4.17.13",
-    "mem": ">=4.0.0"
+    "mem": ">=4.0.0",
+    "lodash.merge": ">=4.6.2"
   },
   "resolutions": {
     "lodash": ">=4.17.13",
