--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -11,13 +11,14 @@
   "devDependencies": {
     "@ljharb/eslint-config": "^13.1.1",
     "@uktrade/client-matrix-js": "^1.0.38",
-    "@wdio/browserstack-service": "^5.2.8",
-    "@wdio/cli": "^5.3.0",
-    "@wdio/local-runner": "^5.3.0",
-    "@wdio/mocha-framework": "^5.2.8",
-    "@wdio/selenium-standalone-service": "^5.2.2",
-    "@wdio/spec-reporter": "^5.2.3",
-    "@wdio/sync": "^5.2.8",
+    "@wdio/browserstack-service": "^5.9.3",
+    "@wdio/cli": "^5.9.3",
+    "@wdio/local-runner": "^5.9.3",
+    "@wdio/mocha-framework": "^5.9.3",
+    "@wdio/selenium-standalone-service": "^5.9.3",
+    "@wdio/spec-reporter": "^5.9.3",
+    "@wdio/sync": "^5.9.3",
+    "browserstack-local": "^1.4.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-medikoo-es5": "^2.0.0",
@@ -28,8 +29,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "lodash": ">=4.17.13",
-    "mem": ">=4.0.0",
-    "lodash.merge": ">=4.6.2"
+    "lodash.merge": ">=4.6.2",
+    "mem": ">=4.0.0"
   },
   "resolutions": {
     "lodash": ">=4.17.13",
