--- a/uiTest/end-to-end/package.json
+++ b/uiTest/end-to-end/package.json
@@ -12,13 +12,13 @@
     "@ljharb/eslint-config": "^13.1.1",
     "@uktrade/client-matrix-js": "^1.0.38",
     "@wdio/browserstack-service": "^5.9.3",
-    "@wdio/cli": "^5.9.3",
-    "@wdio/local-runner": "^5.9.3",
-    "@wdio/mocha-framework": "^5.9.3",
+    "@wdio/cli": "5.10.0",
+    "@wdio/local-runner": "^5.10.0",
+    "@wdio/mocha-framework": "^5.10.0",
     "@wdio/selenium-standalone-service": "^5.9.3",
     "@wdio/spec-reporter": "^5.9.3",
-    "@wdio/sync": "^5.9.3",
-    "browserstack-local": "^1.4.2",
+    "@wdio/sync": "5.10.0",
+    "browserstack-local": "^1.4.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-medikoo-es5": "^2.0.0",
