--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mocha-multi": "^1.0.1",
     "mocha-webpack": "^1.1.0",
     "mockdate": "2.0.2",
+    "nock": "^10.0.6",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.5",
