--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
       - image: *node_version
         environment:
           <<: *find_exporters_base_envs
+          REDIS_CACHING_DISABLED: true
           TZ: "/usr/share/zoneinfo/Europe/London"
     working_directory: ~/data-science-frontend
     steps:
@@ -96,7 +97,9 @@ jobs:
   functional_test:
     docker:
       - <<: *docker_dit_cypress_dependencies
-        environment: *find_exporters_base_envs
+        environment:
+          <<: *find_exporters_base_envs
+          REDIS_CACHING_DISABLED: false
       - *docker_redis
       - *docker_dt07_api_sandbox
     working_directory: ~/data-science-frontend
