parent 56fd03bb7a0c691ba39a05fe551a59e397a33415 author Pippo Raimondi <filipporai@gmail.com> 1566230154 +0100 committer Pippo Raimondi <filipporai@gmail.com> 1566308477 +0100
Add redis for supertest to work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ aliases:
     SSO_REDIRECT_URI: x
     BACKEND_KEY: x
     BACKEND_USER: x
+    NODE_ENV: development
 
 jobs:
   dependencies:
@@ -84,6 +85,7 @@ jobs:
           <<: *find_exporters_base_envs
           REDIS_CACHING_DISABLED: true
           TZ: "/usr/share/zoneinfo/Europe/London"
+      - *docker_redis
     working_directory: ~/data-science-frontend
     steps:
       - checkout
