--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:unit": "jest src/",
     "test:functional": "cypress run",
     "test:functional:watch": "cypress open",
+    "test:e2e": "./node_modules/.bin/wdio uiTest/end-to-end/wdio.conf.js",
     "start": "NODE_ENV=production node --use-strict server.js",
     "watch": "export LOG_LEVEL=debug; nodemon src/app/cluster.js --ignore 'src/public/**/*' --ignore 'src/test/**/*'",
     "build": "npm run clean && npm run prod",
@@ -58,6 +59,15 @@
   "homepage": "https://github.com/uktrade/data-science-frontend#readme",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "@uktrade/client-matrix-js": "^1.0.38",
+    "@wdio/browserstack-service": "^5.9.3",
+    "@wdio/cli": "5.10.0",
+    "@wdio/local-runner": "^5.10.0",
+    "@wdio/mocha-framework": "^5.10.0",
+    "@wdio/selenium-standalone-service": "^5.9.3",
+    "@wdio/spec-reporter": "^5.9.3",
+    "@wdio/sync": "5.10.0",
+    "browserstack-local": "^1.4.0",
     "browser-sync-webpack-plugin": "^2.2.2",
     "cypress": "^3.4.1",
     "dotenv": "^6.0.0",
