--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
-    "babel-plugin-transform-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread"
   ],
   "presets": [
     "@babel/preset-env",
