Fix babel dependencies for end 2 end tests

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
   },
   "homepage": "https://github.com/uktrade/data-science-frontend#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
     "@uktrade/client-matrix-js": "^1.0.38",
     "@wdio/browserstack-service": "^5.9.3",
     "@wdio/cli": "5.10.0",
@@ -67,8 +66,9 @@
     "@wdio/selenium-standalone-service": "^5.9.3",
     "@wdio/spec-reporter": "^5.9.3",
     "@wdio/sync": "5.10.0",
-    "browserstack-local": "^1.4.0",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "browserstack-local": "^1.4.0",
     "cypress": "^3.4.1",
     "dotenv": "^6.0.0",
     "eslint": "^5.16.0",
@@ -81,7 +81,7 @@
     "file-loader": "^4.2.0",
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
-    "jest": "^23.6.0",
+    "jest": "^24.8.0",
     "jest-codemods": "^0.20.0",
     "mocha": "^5.2.0",
     "mocha-circleci-reporter": "0.0.3",
@@ -107,6 +107,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "@uktrade/datahub-header": "^1.2.0",
     "array-from": "^2.1.1",
     "autoprefixer": "^9.6.1",
