--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ jobs:
       - store_artifacts:
           path: visual-screenshots
       - store_artifacts:
-          path: visual-test-report.html
+          path: visual-report
 
 workflows:
   version: 2
