--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "engines": {
     "node": "10.16.0",
-    "npm": "5.6.0"
+    "yarn": "1.16.0"
   },
   "jest": {
     "moduleNameMapper": {
@@ -115,6 +115,7 @@
     "array-from": "^2.1.1",
     "autoprefixer": "^9.6.1",
     "axios": ">=0.19.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta.6",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
@@ -159,11 +160,11 @@
   "resolutions": {
     "tar": "^4.4.8",
     "fstream": ">=1.0.12",
-    "js-yaml": ">=3.13.1",
-    "underscore.string": ">=3.3.5",
     "handlebars": ">=4.0.14",
+    "js-yaml": ">=3.13.1",
     "lodash": ">=4.17.13",
+    "mem": ">=4.0.0",
     "shelljs": ">=0.8.3",
-    "mem": ">=4.0.0"
+    "underscore.string": ">=3.3.5"
   }
 }
