Update the way we start and wait the application

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,13 @@ aliases:
       name: Wait for api sandbox
       command: dockerize -wait ${BACKEND_URL}/ping.xml -timeout 120s
 
+  - &wait_for_frontend
+    run:
+      name: Wait for frontend
+      command: dockerize -wait ${FRONTEND_URL}/ping/ -timeout 120s
+
   - &find_exporters_base_envs
+    FRONTEND_URL: http://localhost:8080
     BACKEND_URL: http://localhost:8002
     LOG_LEVEL: debug
     SSO_BYPASS: true
@@ -46,6 +52,7 @@ aliases:
     TZ: Europe/London
 
   - &find_exporters_e2e_envs
+    FRONTEND_URL: http://localhost:8080
     BACKEND_URL: https://dt07-staging.london.cloudapps.digital
     LOG_LEVEL: debug
     SSO_BYPASS: true
@@ -123,8 +130,9 @@ jobs:
       - *wait_for_api_sandbox
       - run:
           name: Start App
-          command: ./start-app.sh
+          command: yarn develop
           when: always
+      - *wait_for_frontend
       - run:
           name: Cypress tests
           command: npm run test:functional
@@ -147,8 +155,9 @@ jobs:
           command: npm install
       - run:
           name: Start App
-          command: ./start-app.sh
+          command: yarn develop
           when: always
+      - *wait_for_frontend
       - run:
           name: Webdriverio tests
           command: npm run test:e2e
@@ -171,8 +180,9 @@ jobs:
       - *wait_for_api_sandbox
       - run:
           name: Start App
-          command: ./start-app.sh
+          command: yarn develop
           when: always
+      - *wait_for_frontend
       - run:
           name: Visual tests
           command: npm run test:visual
