Remove yarn from the project
Removes the use of yarn on the project to only use npm.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Data Hub Find Exporters",
   "main": "server.js",
   "engines": {
-    "node": "10.16.0",
-    "yarn": "1.16.0"
+    "node": "10.16.0"
   },
   "jest": {
     "moduleNameMapper": {
