--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-react": "^7.24.0",
     "file-loader": "^4.2.0",
     "jasmine": "3.0.0",
     "jasmine-core": "2.99.1",
